[package]
name = "redrss"
version = "0.1.0"
authors = ["Arvindh Kumar Chandran <arvindh.chandran@fortanix.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10.6", features = ["blocking"] }
clokwerk = "0.3.0"
